--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -92,9 +92,9 @@
           class="col-12 col-sm-6 col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 links"
           aria-labelledby="useful-links"
         >
-          <h6 id="useful-links" class="text-uppercase fw-bold mb-4">
+          <p id="useful-links" class="text-uppercase fw-bold p-0 m-0 mb-4">
             Useful Links
-          </h6>
+          </p>
           <p>
             <a [routerLink]="['/movies', 1]" aria-label="Movies page">
               Movies
@@ -115,7 +115,9 @@
           class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4"
           aria-labelledby="contact-info"
         >
-          <h6 id="contact-info" class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p id="contact-info" class="text-uppercase fw-bold p-0 m-0 mb-4">
+            Contact
+          </p>
           <p>
             <i class="fas fa-home me-3" aria-hidden="true"></i> Egypt, Cairo
           </p>
