improve footer colors contrast

--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -161,7 +161,7 @@
 
   <!-- Copyright -->
   <div
-    class="text-center text-secondary p-4"
+    class="text-center text-light p-4"
     style="background-color: rgba(0, 0, 0, 0.05)"
     aria-label="Copyright information"
   >
